REGRESSION (r218015) IconLoaders for already-cached resources expect to be asynchronous, no longer are. <rdar://problem/32817519> and https://bugs.webkit.org/show_bug.cgi?id=173478

Reviewed by Daniel Bates.

Source/WebCore:

Covered by API test.

Being synchronous is actually better as it's resolved another issue or two.
But only if we can actually deliver the data without crashing first.
So let's do that.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::didGetLoadDecisionForIcon): Put the IconLoader in the set of active icon loaders
  before actually starting the icon loading.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/IconLoadingDelegate.mm:


Canonical link: https://commits.webkit.org/190360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218409 268f45cc-cd09-0410-ab3c-d52691b4dbfc